<resources>
    <string name="app_name">RepuestosExpressAdmin</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="pedidos">Pedidos</string>
    <string name="productos">Productos</string>
    <string name="añadir_producto">Pulsa donde quieras añadir un nuevo producto</string>
    <string name="seleccion_sugerencias">Selecciona para las sugerencias</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="permisos_galeria_denegados">Permisos de galería denegados</string>
    <string name="familias">Familias</string>
    <string name="borrar_producto">¿Borrar producto?</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="requerido">Requerido</string>
    <string name="registro_insertado">Registro insertado correctamente</string>
    <string name="ingresar_precio_valido">Ingrese un precio válido</string>
    <string name="ingresar_nombre">Ingrese el nombre del producto</string>
    <string name="ingresar_precio">Ingresa el precio del producto</string>
    <string name="producto_eliminado">Producto eliminado</string>
    <string name="perder_informacion_producto">Se perderá toda la información relacionada a este producto, ¿Estás seguro?</string>
    <string name="añadir_sugerencias">Añadir sugerencias</string>
    <string name="eliminar">Eliminar</string>
    <string name="añadir">Añadir</string>
    <string name="nuevo_producto">Añadir producto</string>
    <string name="informacion">Información</string>
    <string name="nueva_familia">Añadir familia</string>
    <string name="familia_eliminada">Familia eliminada</string>
    <string name="perder_informacion_familia">Se perderá toda la información relacionada a esta familia, ¿Estás seguro?</string>
    <string name="borrar_familia">¿Borrar familia?</string>
    <string name="precio_formato" translatable="false">%1$.2f€</string>
    <string name="sugerencias_enviadas">Sugerencias actualizadas</string>
    <string name="historial">Historial</string>
    <string name="pendiente">Pendiente</string>
    <string name="cancelar_pedido">Cancelar pedido</string>
    <string name="informacion_eliminar_pedido">¿Estás seguro de que quieres cancelar este pedido?</string>
    <string name="error_eliminar_pedido">Error al eliminar el pedido</string>
    <string name="precio_formato2">Precio: %1$.2f€</string>
    <string name="cantidad_formato">Cantidad: %1$d</string>
    <string name="detalles_pedido">Detalles del pedido</string>
    <string name="id" translatable="false">ID: %1$s</string>
    <string name="pedido_cancelado">PEDIDO CANCELADO</string>
    <string name="total" translatable="false">Total: %1$.2f€</string>
    <string name="estado">Estado: %1$s</string>
    <string name="fecha">Fecha: %1$s</string>
    <string name="borrar">Borrar</string>
    <string name="cantidad">"Cantidad: "</string>
    <string name="finalizar_pedido">Finalizar pedido</string>
    <string name="pedido_finalizado">Pedido finalizado</string>
    <string name="informacion_finalizar_pedido">El estado del pedido cambiará a <b>Finalizado</b> y no se podrá modificar. ¿Estás seguro?</string>
    <string name="error_finalizar_pedido">Hubo un error al intentar finalizar el pedido</string>
    <string name="filtro_por_id">Buscar por Id</string>
    <string name="filtro_familia">Buscar familia</string>
    <string name="filtro_producto">Buscar producto</string>
    <string name="introducir_cuenta_administrador">Se debe introducir una cuenta de administrador</string>
    <string name="seleccionar_minimo_sugerencias">Selecciona un mínimo de dos sugerencias</string>
    <string name="guardar_email">Guardar email</string>
    <string name="inicio_sesion_administrador">Inicio de Sesión de Administrador</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="direccion">Direccion: %1$s</string>
    <string name="metodo_pago">Método de pago: %1$s</string>
</resources>